# workshop-agent-harness

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  DECISOES.md  HANDOFF.md  PRD.md  README.md  alembic.ini  docker-compose.yml  ideia.md  pyproject.toml  skills-lock.json
.claude/: settings.json
.claude/agents/: eval-runner.md  revisor-codigo.md
.claude/commands/: feature.md  run-evals.md  scorecard.md  seed-data.md  validar.md
.claude/rules/: agente.md  backend.md  definicao-de-pronto.md  estilo-codigo.md  evals.md  frontend.md  ingestao.md  testes.md
apresentacao/: agent-harness-apresentacao.html
backend/: Dockerfile  xxhash_compat.py
backend/agent/: catalogo.py  conversa.py  deps.py  eventos.py  grafo.py  graph.py  llm.py  periodo.py  saude.py  sql_templates.py  state.py  tracing.py
backend/app/: __init__.py  config.py  db.py  dependencies.py  main.py
backend/evals/: __init__.py  __main__.py  golden.py  judge.py  runner.py  scoring.py
backend/harness/: artefatos.py  modelo.py  repo.py
backend/tests/: conftest.py  test_chat.py  test_chat_endpoint.py  test_chat_sse.py  test_conversa.py  test_eval_golden.py  test_eval_judge.py  test_eval_runner.py  test_eval_scoring.py  test_evals_comparadores.py  (+17 more)
evals/: __init__.py  comparadores.py  golden.py  juiz.py  relatorio.py  run_evals.py  runner.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
metrics/: README.md  entregas.jsonl
scripts/: gate.py
seed/: NARRATIVAS.md  README.md  generate.py  ingest.py  load.py  schema.sql
(+99 files in other folders)
