[project]
name = "workshop-agent-harness"
version = "0.1.0"
description = "Agente analítico de vendas (text-to-SQL + recuperação qualitativa)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.18.4",
    "faker>=40.23.0",
    "qdrant-client>=1.12",
    "minio>=7.2",
    "pyyaml>=6",
    "openai>=1.40",
    "langchain>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langfuse>=4.9.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
mypy_path = "backend"

[tool.ruff]
line-length = 100
target-version = "py313"
